k8s/services/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: shopno-apps
  labels:
    app.kubernetes.io/name: n8n
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: n8n
